# data.tvaisanen.com

./: README.md  app.py  pyproject.toml
pages/: linear_regression.py
